--- a/src/main/resources/templates/admin/forms/accessory.html
+++ b/src/main/resources/templates/admin/forms/accessory.html
@@ -95,7 +95,7 @@
   <script src="../../js/si/jquery.html5uploader.min.js"></script>
   <script src="../../js/si/upload.js"></script>
   <script>
-    upload_trip("/api/trip/upload_trip", "image","#image", "#hidden_image",640,640, "landscape");
+    upload_trip("/api/trip/upload_icon", "image","#image", "#hidden_image",640,640, "landscape");
   </script>
 </th:block>
 </body>
