--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -29,7 +29,7 @@
       </a>
       <ul class="treeview-menu">
         <li><a href="/#"><i class="fa fa-circle-o"></i> Blog</a></li>
-        <li><a href="/#"><i class="fa fa-circle-o"></i> Testi</a></li>
+        <li><a href="/testimonial"><i class="fa fa-circle-o"></i> Testi</a></li>
       </ul>
     </li>
     <li class="treeview">
