--- a/src/main/resources/templates/admin/forms/accessory.html
+++ b/src/main/resources/templates/admin/forms/accessory.html
@@ -21,7 +21,7 @@
     <div class="box-header with-border">
       <h1 class="box-title">Accessory Form</h1>
     </div>
-    <form role="form" th:action="@{'/accessory/save'}" th:object="${response}" method="post">
+    <form role="form" th:action="@{'/accessory/save'}" th:object="${response}" method="post" data-parsley-validate>
       <div class="box-body">
         <input id="object_id" type="hidden" name="id" th:if="${response.object.id != null}" th:value="${response.object.id != null && response.object.id != 0 ? response.object.id : 0}">
         <div class="form-group">
@@ -42,7 +42,7 @@
         <div class="form-group">
           <label for="image">Picture</label>
           <div class="wrap-file">
-            <input type="file" id="image">
+            <input type="file" id="image" required>
           </div>
           <input type="hidden" id="hidden_image" name="picture"
                  th:value="${response.object.picture}">
@@ -66,7 +66,7 @@
 
         <div class="form-group">
           <label for="description">Description</label>
-          <textarea class="form-control" name="description" th:text="${response.object.description}" id="description" placeholder="Enter Motor Description here"></textarea>
+          <textarea class="form-control" name="description" th:text="${response.object.description}" id="description" placeholder="Enter Motor Description here" required></textarea>
         </div>
 
         <div class="form-group">
@@ -80,7 +80,7 @@
         <div class="form-group">
           <label for="discount">Discount</label>
           <div class="input-group" id="discount">
-            <input type="number" min="0" name="discount" class="form-control" placeholder="Discount" th:value="${response.object.discount}" required>
+            <input type="number" min="0" name="discount" class="form-control" placeholder="Discount" th:value="${response.object.discount}">
             <span class="input-group-addon">%</span>
           </div>
         </div>
@@ -94,6 +94,7 @@
 <th:block layout:fragment="footer-js">
   <script src="../../js/si/jquery.html5uploader.min.js"></script>
   <script src="../../js/si/upload.js"></script>
+  <script src="../../js/si/parsley.min.js"></script>
   <script>
     upload_trip("/api/trip/upload_icon", "image","#image", "#hidden_image",640,640, "landscape");
   </script>
