--- a/src/main/resources/templates/admin/forms/trip.html
+++ b/src/main/resources/templates/admin/forms/trip.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="admin/layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.w3.org/1999/html" layout:decorator="admin/layout">
 <head>
   <title>R2R-Trip</title>
   <link type="text/css" href="../../css/jquery-ui-1.10.0.custom.css" rel="stylesheet"/>
@@ -17,8 +18,6 @@
 .collapse{
   display: none;
 }
-
-
 </style>
 </head>
 <body>
@@ -27,12 +26,12 @@
     <div class="box-header with-border">
       <h1 class="box-title">Trip Form</h1>
     </div>
-    <form role="form" th:action="@{'/trip/save'}" th:object="${response}" method="post">
+    <form role="form" th:action="@{'/trip/save'}" id="tripForm" th:object="${response}" method="post" data-parsley-validate>
       <div class="box-body">
         <input id="object_id" type="hidden" name="id" th:if="${response.object.id != 0}" th:value="${response.object.id != null && response.object.id != 0 ? response.object.id : 0}">
         <div class="form-group">
           <label for="title">Title</label>
-          <input type="text" class="form-control" name="title" id="title" placeholder="Title" th:value="${response.object.title}" required>
+          <input type="text" class="form-control" name="title" id="title" placeholder="Title" th:value="${response.object.title}" data-parsley-required="true" data-beautify="false">
         </div>
 
         <div class="form-group">
@@ -43,7 +42,7 @@
         <div class="form-group">
           <label for="icon_cover">Icon Cover</label>
             <div class="wrap-file">
-              <input type="file" id="icon_cover">
+              <input type="file" id="icon_cover" data-parsley-required="true" data-beautify="false">
             </div>
             <input type="hidden" id="hidden_icon_cover" name="iconCover"
                    th:value="${response.object.iconCover}">
@@ -69,7 +68,7 @@
         <div class="form-group">
           <label for="icon_publisher">Icon Publisher</label>
           <div class="wrap-file">
-            <input type="file" id="icon_publisher">
+            <input type="file" id="icon_publisher" data-parsley-required="true" data-beautify="false">
           </div>
           <input type="hidden" id="hidden_icon_publisher" name="iconPublisher"
                  th:value="${response.object.iconPublisher}">
@@ -95,7 +94,7 @@
         <div class="form-group">
           <label for="cover_trip">Cover</label>
           <div class="wrap-file">
-            <input type="file" id="cover_trip">
+            <input type="file" id="cover_trip" data-parsley-required="true" data-beautify="false">
           </div>
           <input type="hidden" id="hidden_cover_trip" name="coverLandscape"
                  th:value="${response.object.coverLandscape}">
@@ -120,13 +119,13 @@
 
         <div class="form-group">
           <label for="max-rider">Max Rider</label>
-          <input type="number" min="0" name="maxRider" id="max-rider" class="form-control" placeholder="Max Rider" th:value="${response.object.maxRider}" required>
+          <input type="number" min="0" name="maxRider" id="max-rider" class="form-control" placeholder="Max Rider" th:value="${response.object.maxRider}" data-parsley-required="true" data-beautify="false">
         </div>
 
         <div class="form-group">
           <label for="duration">Duration</label>
           <div class="input-group" id="duration">
-            <input type="number" min="0" name="duration" class="form-control" placeholder="Duration" th:value="${response.object.duration}" required>
+            <input type="number" min="0" name="duration" class="form-control" placeholder="Duration" th:value="${response.object.duration}" data-parsley-required="true" data-beautify="false">
             <span class="input-group-addon">Days</span>
           </div>
         </div>
@@ -134,19 +133,23 @@
         <div class="form-group">
           <label for="distance">Distance</label>
           <div class="input-group" id="distance">
-            <input type="number" min="0" name="distance" class="form-control" placeholder="Distance" th:value="${response.object.distance}" required>
+            <input type="number" min="0" name="distance" class="form-control" placeholder="Distance" th:value="${response.object.distance}" data-parsley-required="true" data-beautify="false">
             <span class="input-group-addon">KMs</span>
           </div>
         </div>
 
-        <div id="input-list-tab" class="m-top-xs form-group" style="display: flow-root" th:value="${facilities}">
-          <div th:each="facility, iterStat:${facilities}" th:id="warper-+${iterStat.index}+.id" class="m-bottom-xs warpers">
-            <div class="col-sm-4">
-              <input type="checkbox" class="check-facility" th:value="${facility.id}" th:text="' ' + ${facility.name}" th:checked="${response.object.facilityInclude != udefined ? #lists.contains(response.object.facilityInclude, facility.id) : false}" > <br>
+        <div class="form-group">
+          <label for="input-list-tab">Facility(include)</label>
+          <div id="input-list-tab" class="m-top-xs form-group" style="display: flow-root" th:value="${facilities}">
+            <div class="m-bottom-xs warpers">
+              <th:block th:each="facility, iterStat:${facilities}">
+                <input type="checkbox" class="check-facility" name="facilities[]" th:value="${facility.id}" th:text="' ' + ${facility.name}" th:checked="${response.object.facilityInclude != udefined ? #lists.contains(response.object.facilityInclude, facility.id) : false}" data-parsley-required="true" data-parsley-mincheck=1"> <br>
+              </th:block>
             </div>
+            <input type="hidden" name="facilityInclude" id="trip-facility" th:value="${response.object.facilityInclude}">
           </div>
-          <input type="hidden" name="facilityInclude" id="trip-facility" th:value="${response.object.facilityInclude}">
         </div>
+
         <div class="form-group">
           <label for="facility-not">Facility(not include)</label>
           <textarea class="form-control" name="facilityNot" th:text="${response.object.facilityNot}" id="facility-not" placeholder="Enter Facility Not Include"></textarea>
@@ -154,18 +157,18 @@
 
         <div class="form-group">
           <label for="tag">Tag</label>
-          <input type="text" name="tag" class="form-control" th:value="${response.object.tag}" id="tag" placeholder="Tag" required>
+          <input type="text" name="tag" class="form-control" th:value="${response.object.tag}" id="tag" placeholder="Tag" autocomplete="off" data-parsley-required="true" data-beautify="false">
         </div>
 
         <div class="form-group">
           <label for="captain">Captain</label>
-          <input type="text" class="form-control" id="captain" placeholder="Captain" th:value="${response.object.roadCaptain != null && response.object.roadCaptain != '' ? response.object.roadCaptain.name : ''}">
+          <input type="text" class="form-control" id="captain" placeholder="Captain" th:value="${response.object.roadCaptain != null && response.object.roadCaptain != '' ? response.object.roadCaptain.name : ''}" required>
           <input type="hidden" class="hidden tournamentId" name="roadCaptain" th:value="${response.object.roadCaptain != null && response.object.roadCaptain.id != 0 ? response.object.roadCaptain.id : 0}">
         </div>
 
         <div class="form-group">
           <label for="meeting">Meeting Point</label>
-          <input type="text" class="form-control" id="meeting" name="meetingPoint" th:value="${response.object.meetingPoint}" placeholder="Meeting Point" required>
+          <textarea class="form-control" id="meeting" name="meetingPoint" th:text="${response.object.meetingPoint}"></textarea>
         </div>
 
         <div class="form-group">
@@ -181,10 +184,10 @@
         <div class="form-group">
           <label for="map">Map</label>
           <div class="wrap-file">
-            <input type="file" id="map">
+            <input type="file" id="map" data-parsley-required="true" data-beautify="false">
           </div>
           <input type="hidden" id="hidden_map" name="map"
-                 th:value="${response.object.map}">
+                 th:value="${response.object.map}" required>
           <!-- <input type="hidden" id="hidden_upload_thumb" name="thumbnail" th:value="${response.object.thumbnail}"> -->
           <div class="wrap_map collapse">
             <div class="progress">
@@ -205,19 +208,21 @@
         </div>
       </div>
       <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" id="tripSaveBtn" class="btn btn-primary">Submit</button>
       </div>
     </form>
   </div>
 </div>
 <th:block layout:fragment="footer-js">
-  <link type="text/css" href="../../css/jquery-ui-1.10.0.custom.css" rel="stylesheet"/>
   <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
   <script src="https://cdn.ckeditor.com/ckeditor5/12.0.0/classic/ckeditor.js"></script>
+  <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
   <script src="../../js/si/jquery.html5uploader.min.js"></script>
   <script src="../../js/si/bootstrap-tokenfield.min.js"></script>
   <script src="../../js/si/typehead.bundle.min.js"></script>
+  <script src="../../js/si/parsley.min.js"></script>
   <script src="../../js/si/upload.js"></script>
+  <script src="../../js/si/trip.js"></script>
   <script>
 $(function() {
   $(document).ready(function () {
@@ -233,7 +238,6 @@ $(function() {
 
     $('.check-facility').change(function () {
 
-
         var $this = $(this);
 
         if ($this.is(":checked"))
@@ -244,7 +248,7 @@ $(function() {
         {
           array = array.filter(x => x != $this.val());
         }
-
+        console.log(array)
 
         $('#trip-facility').val(array)
      });
@@ -293,8 +297,25 @@ $(function() {
     .then(editor => {
       myEditor = editor;
       console.log(myEditor.getData())
+      console.log(myEditor)
     })
     .catch(error => {});
+
+    ClassicEditor
+    .create(document.querySelector( '#meeting' ))
+    .then(editor => {
+      myEditor = editor;
+
+    })
+    .catch(error => {});
+
+    ClassicEditor
+    .create(document.querySelector( '#facility-not' ))
+    .then(editor => {
+      myEditor = editor;
+    })
+    .catch(error => {});
+
   </script>
 </th:block>
 </body>
