hide discount, fix facility badrequest

--- a/src/main/resources/templates/admin/forms/facility.html
+++ b/src/main/resources/templates/admin/forms/facility.html
@@ -32,7 +32,7 @@
         <div class="form-group">
           <label for="image">Image</label>
           <div class="wrap-file">
-            <input type="file" id="image" required>
+            <input type="file" id="image">
           </div>
           <input type="hidden" id="hidden_image" name="image"
                  th:value="${response.object.image}">
