--- a/src/main/resources/templates/admin/forms/roadCaptain.html
+++ b/src/main/resources/templates/admin/forms/roadCaptain.html
@@ -32,7 +32,7 @@
         <div class="form-group">
           <label for="image">Picture</label>
           <div class="wrap-file">
-            <input type="file" id="image" required>
+            <input type="file" id="image">
           </div>
           <input type="hidden" id="hidden_image" name="pictureUrl"
                  th:value="${response.object.pictureUrl}">
