--- a/src/main/resources/templates/admin/forms/price-list.html
+++ b/src/main/resources/templates/admin/forms/price-list.html
@@ -53,13 +53,13 @@
           </select>
         </div>
 
-        <div class="form-group">
-          <label for="discount">Discount</label>
-          <div class="input-group" id="discount">
-            <input type="number" min="0" name="discount" class="form-control" placeholder="Discount" th:value="${response.object.discount}">
-            <span class="input-group-addon">%</span>
-          </div>
-        </div>
+        <!--<div class="form-group">-->
+          <!--<label for="discount">Discount</label>-->
+          <!--<div class="input-group" id="discount">-->
+            <!--<input type="number" min="0" name="discount" class="form-control" placeholder="Discount" th:value="${response.object.discount}">-->
+            <!--<span class="input-group-addon">%</span>-->
+          <!--</div>-->
+        <!--</div>-->
       </div>
       <div class="box-footer">
         <button type="submit" class="btn btn-primary">Submit</button>
