--- a/src/main/resources/templates/admin/forms/trip-itinerary.html
+++ b/src/main/resources/templates/admin/forms/trip-itinerary.html
@@ -42,7 +42,7 @@
                 <div class="form-group">
                   <label th:for="picture-+${iterStat.index}">Picture</label>
                   <div class="wrap-file">
-                    <input type="file" th:id="picture-+${iterStat.index}" required>
+                    <input type="file" th:id="picture-+${iterStat.index}">
                   </div>
                   <input type="hidden" th:id="hidden_picture-+${iterStat.index}" th:name="itineraries[+${iterStat.index}+].imageUrl"
                          th:value="${response.object[iterStat.index].imageUrl}">
