--- a/src/main/resources/templates/admin/forms/trip.html
+++ b/src/main/resources/templates/admin/forms/trip.html
@@ -146,7 +146,7 @@
                 <input type="checkbox" class="check-facility" name="facilities[]" th:value="${facility.id}" th:text="' ' + ${facility.name}" th:checked="${response.object.facilityInclude != udefined ? #lists.contains(response.object.facilityInclude, facility.id) : false}" data-parsley-required="true" data-parsley-mincheck=1"> <br>
               </th:block>
             </div>
-            <input type="text" name="facilityInclude" id="trip-facility" th:value="${response.object.facilityInclude}">
+            <input type="hidden" name="facilityInclude" id="trip-facility" th:value="${response.object.facilityInclude}">
           </div>
         </div>
 
