--- a/src/main/resources/templates/admin/forms/accessory.html
+++ b/src/main/resources/templates/admin/forms/accessory.html
@@ -42,7 +42,7 @@
         <div class="form-group">
           <label for="image">Picture</label>
           <div class="wrap-file">
-            <input type="file" id="image" required>
+            <input type="file" id="image">
           </div>
           <input type="hidden" id="hidden_image" name="picture"
                  th:value="${response.object.picture}">
