--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -21,28 +21,28 @@
         <li><a href="/captain"><i class="fa fa-circle-o"></i> Captain</a></li>
       </ul>
     </li>
-    <!--<li class="treeview">-->
-      <!--<a href="">-->
-        <!--<i class="fa fa-folder"></i>-->
-        <!--<span>Production</span>-->
-        <!--<i class="fa fa-angle-left pull-right"></i>-->
-      <!--</a>-->
-      <!--<ul class="treeview-menu">-->
-        <!--<li><a href="/#"><i class="fa fa-circle-o"></i> Blog</a></li>-->
-        <!--<li><a href="/#"><i class="fa fa-circle-o"></i> Testi</a></li>-->
-      <!--</ul>-->
-    <!--</li>-->
-    <!--<li class="treeview">-->
-      <!--<a href="">-->
-        <!--<i class="fa fa-folder"></i>-->
-        <!--<span>Administrative</span>-->
-        <!--<i class="fa fa-angle-left pull-right"></i>-->
-      <!--</a>-->
-      <!--<ul class="treeview-menu">-->
-        <!--<li><a href="/#"><i class="fa fa-circle-o"></i> Confirmation</a></li>-->
-        <!--<li><a href="/#"><i class="fa fa-circle-o"></i> Request Trip</a></li>-->
-      <!--</ul>-->
-    <!--</li>-->
+    <li class="treeview">
+      <a href="">
+        <i class="fa fa-folder"></i>
+        <span>Production</span>
+        <i class="fa fa-angle-left pull-right"></i>
+      </a>
+      <ul class="treeview-menu">
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Blog</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Testi</a></li>
+      </ul>
+    </li>
+    <li class="treeview">
+      <a href="">
+        <i class="fa fa-folder"></i>
+        <span>Administrative</span>
+        <i class="fa fa-angle-left pull-right"></i>
+      </a>
+      <ul class="treeview-menu">
+        <li><a href="/transaction"><i class="fa fa-circle-o"></i> Confirmation</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Request Trip</a></li>
+      </ul>
+    </li>
   </ul>
 </section>
 <!-- /.sidebar -->
