--- a/src/main/resources/templates/admin/page/transaction.html
+++ b/src/main/resources/templates/admin/page/transaction.html
@@ -37,6 +37,10 @@
             <th>Code</th>
             <th>Status</th>
             <th>Trip</th>
+            <th>Create Date</th>
+            <th>Create By</th>
+            <th>Update Date</th>
+            <th>Update By</th>
             <th>Action</th>
           </tr>
           </thead>
