trip publish unpublish

--- a/src/main/resources/templates/admin/forms/testimonial.html
+++ b/src/main/resources/templates/admin/forms/testimonial.html
@@ -102,15 +102,31 @@
           <textarea class="form-control" name="description" id="description" placeholder="Enter description" th:text="${response.object.description}"></textarea>
         </div>
 
-        <label for="add-article">Add Article</label>
-        <button style="margin: 0px 15px; height: 30px;" id="add-article" type="button"
-                class="btn btn-default btn-sm m-bottom-sm btn-add-tab">
-          <i class="fa fa-plus fa-lg"></i>
-        </button>
         <div class="form-group article-list">
           <label for="description">Article</label>
           <div class="article-list-0">
-            <textarea class="form-control" name="article" id="article1" placeholder="Enter description" th:text="${response.object.article}"></textarea>
+            <textarea class="form-control mce-editor ta_tmce" name="article" id="article1" placeholder="Enter description" th:text="${response.object.article}"></textarea>
+          </div>
+          <div class="button-plus-minus" style="margin-top: 10px"><button id="add-article" style="margin-right:3px;" type="button" class="btn btn-default btn-sm m-bottom-sm btn-add-body"><i class="fa fa-plus fa-lg" style="color: #3DD091;"></i>&nbsp;Add Page</button></div>
+          <br/>
+        </div>
+
+        <div class ="list-body">
+          <br>
+          <div class="multi-page" style="margin-bottom:40px;">
+            <div class="form-group" style="position:relative">
+              <label class="col-lg-2 control-label body-label">Body-page-1&nbsp;<span class="font-sm text-danger"><i class="fa fa-asterisk fa-sm"></i></span></label>
+              <div class="col-lg-10 text-field-col">
+                <textarea class="form-control mce-editor ta_tmce" data-parsley-required="true" cols="40" rows="20" th:text="${response.object.article}"></textarea>
+                <div class = "button-plus-minus" style="position:absolute; bottom: -45px;">
+                  <button id="add-body" type="button"
+                          class="btn btn-default btn-sm m-bottom-sm btn-add-body">
+                    <i class="fa fa-plus fa-lg" style="color: #3DD091;"></i>
+                    Add Page
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -129,16 +145,20 @@
   <link type="text/css" href="../../css/jquery-ui-1.10.0.custom.css" rel="stylesheet"/>
   <!--<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>-->
   <script src="https://cdn.ckeditor.com/ckeditor5/12.0.0/classic/ckeditor.js"></script>
+  <script src="//tinymce.cachefly.net/4.3/tinymce.min.js"></script>
   <script src="../../js/si/jquery.html5uploader.min.js"></script>
   <script src="../../js/si/bootstrap-tokenfield.min.js"></script>
   <script src="../../js/si/typehead.bundle.min.js"></script>
   <script src="../../js/si/upload.js"></script>
+  <script src="../../js/si/tiny_mce.js"></script>
   <script src="../../js/si/testimonial.js"></script>
+  <script src="../../js/si/pagebreak.js"></script>
   <script>
     $(function() {
       $(document).ready(function () {
           upload_trip("/api/trip/upload_icon", "icon_cover","#icon_cover", "#hidden_icon_cover",640,640, "landscape");
           upload_trip("/api/trip/upload_trip", "cover_trip","#cover_trip", "#hidden_cover_trip",640,640, "potrait");
+          multi_page_editor();
       });
       $('#datepickers').datepicker({
         format: 'mm/dd/yyyy',
@@ -154,13 +174,13 @@
       <!--showAutocompleteOnFocus: true-->
     })
 
-    ClassicEditor
-    .create(document.querySelector( '#article1' ))
-    .then(editor => {
-      myEditor = editor;
-      console.log(myEditor.getData())
-    })
-    .catch(error => {});
+    <!--ClassicEditor-->
+    <!--.create(document.querySelector( '#article1' ))-->
+    <!--.then(editor => {-->
+      <!--myEditor = editor;-->
+      <!--console.log(myEditor.getData())-->
+    <!--})-->
+    <!--.catch(error => {});-->
 
     ClassicEditor
     .create(document.querySelector( '#description' ))
