add email service and template

--- a/src/main/resources/templates/admin/email/checkout.html
+++ b/src/main/resources/templates/admin/email/checkout.html
@@ -2,7 +2,19 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head></head>
 <body>
-<span th:text="${message}"></span>
-<!--<span th:text="${ridersNeeded}"></span>-->
+<span th:text="${username}"></span>
+<span th:text="${image}"></span>
+<span th:text="${iconCover}"></span>
+<span th:text="${startDate}"></span>
+<span th:text="${endDate}"></span>
+<span th:text="${meetingPoint}"></span>
+<span th:text="${motorName}"></span>
+<span th:text="${motorImage}"></span>
+<span th:text="${expiredDate}"></span>
+<span th:text="${tripTitle}"></span>
+<span th:text="${tripPrice}"></span>
+<span th:text="${invoiceId}"></span>
+<span th:text="${accossoriesTitle}"></span>
+<span th:text="${accessoriesSize}"></span>
 </body>
 </html>
